Fix button flickering highlight when hovered.
TEST=Tested manually on peppy.
BUG=chromium:638500

Reviewed-on: https://chromium-review.googlesource.com/368071
Tested-by: Yuli Huang <yuli@chromium.org>

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -669,6 +669,8 @@ body.performance-test * {
 #album .buttons,
 #browser .buttons {
   position: fixed;
+  /* Fix crbug.com/638500: button background flickers when hovered. */
+  transform: translate3d(0, 0, 0);
 }
 
 #album .buttons button[disabled],
